# starspan

./: .hgignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.md  THANKS  configure  configure.in  copyright.txt  mksrcdist.sh.in  reconf  starspan.in
autom4te.cache/: output.0  requests  traces.0  traces.1
binaries/windows/: BUILD.windows.txt  DEVNOTES.txt  build.properties  build.xml  copyright.txt  izinstall.xml  izshortcut.xml  mingw_prepare_binaries.sh
binaries/windows/base_dist/: README.txt
doc/design/: Makefile  classdiagram.java  csv-sd.pic  dbf-sd.pic  envisl-sd.pic
doc/paper/: Makefile  starspan.bib  starspan.tex
gui/: DEVNOTES.txt  build.properties  build.xml  copyright.txt  izinstall.xml  izshortcut.xml
gui/applet/: index.html
gui/base_dist/: README.txt
libtests/: README.txt
libtests/gdal/: rasteriotest.cc
libtests/java/: README.txt  build.xml
libtests/java/src/starspan/tools/: PolygonizerTest.java  Prototype1.java  ShapeDump.java  ShapeViewer.java
src/: common.h  config.h.in  starspan.h  starspan2.cc  starspan_countbyclass.cc  starspan_csv.cc  starspan_csv2.cc  starspan_csv_raster_field.cc  starspan_dump.cc  starspan_dup_pixel.cc  starspan_gen_envisl.cc  starspan_grass.cc  starspan_jtstest.cc  starspan_minirasters.cc  starspan_minirasters2.cc  starspan_minirasterstrip2.cc  starspan_rasterize.cc  starspan_stats.cc  starspan_tuct2.cc  starspan_update_csv.cc  starspan_util.cc
src/csv/: Csv.cc  Csv.h  CsvOutput.cc  csvtest.cc
src/etc/: dumppoints.cc  starspan.extractpoints.cc
src/jts/: jts.cc  jts.h
src/raster/: Makefile  Raster.h  Raster_gdal.cc
src/rasterizers/: LayerRasterizer.cc  LayerRasterizer.h  LineRasterizer.cc  Makefile  layertest.cc  rasterizers.h  rpolyqt.cc  test.cc
src/stats/: Stats.cc  Stats.h
src/traverser/: pixset.cc  polyqt.cc  traverser.cc  traverser.h
src/util/: Progress.cc  Progress.h  test.cc
src/vector/: Vector.h  Vector_ogr.cc
tests/: Makefile
tests/data/raster/: starspan1raster.hdr  starspan1raster.img  starspan2raster.hdr  starspan2raster.img  starspan3raster.hdr  starspan3raster.img
tests/data/vector/: geom_1314917362.69.json  starspan_testln.sbn  starspan_testln.sbx  starspan_testln.shp  starspan_testln.shp.xml  starspan_testln.shx  starspan_testln_.dbf  starspan_testln_.evf  starspan_testply.dbf  starspan_testply.sbn  starspan_testply.sbx  starspan_testply.shp  starspan_testply.shp.xml  starspan_testply.shx  starspan_testpt.dbf  starspan_testpt.sbn  starspan_testpt.sbx  starspan_testpt.shp  starspan_testpt.shp.xml  starspan_testpt.shx
tests/data/vector/ln/: ln.dbf  ln.shp  ln.shx
tests/data/vector/ply/: ply.dbf  ply.shp  ply.shx
tests/data/vector/pt/: pt.dbf  pt.shp  pt.shx
tests/expected/miniraster/: myprefix_0000.hdr  myprefix_0000.img  myprefix_0003.hdr  myprefix_0003.img  myprefix_0004.hdr  myprefix_0004.img  myprefix_0005.hdr  myprefix_0005.img  myprefix_buff2_0003.hdr  myprefix_buff2_0003.img
tests/expected/mrstrip/: myoutput_mr.hdr  myoutput_mr.img  myoutput_mrid.hdr  myoutput_mrid.img  myoutput_mrloc.glt  myoutput_mrloc.hdr
tests/misc/: bresenham.cc  create_file.cc  polygonize.cc
tests/misc/LFS/: Makefile  README.txt  create_big_file.cc  lfs.h  lfstest.cc
